# nba-injury-report-pdf-to-df

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/nba-injury-report-pdf-to-df/: core.py
src/nba_injury_report_pdf_to_df/: __init__.py  core.py  utils.py
tests/: function_test.py
