[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-injury-report-pdf-to-df"
version = "0.1.4"
description = "Convert NBA injury reports from PDF to a DataFrame"
authors = [{ name = "John Goodhand", email = "jcgoodhand@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pandas",
    "pdfplumber"
]
requires-python = ">=3.11"

[tool.setuptools]
packages = ["nba_injury_report_pdf_to_df"]
package-dir = {"" = "src"}
